hphp/test/zend/good/Zend/tests/double_to_string_64bit.php
<?hh
<<__EntryPoint>> function main(): void {
$doubles = vec[
        290000000000000000,
        290000000000000,
        29000000000000,
        29000000000000.123123,
        29000000000000.7123123,
        29000.7123123,
        239234242.7123123,
        0.12345678901234567890,
        100000000000000001,
        1000006000000000011,
        100000000000001,
        10000000000,
        999999999999999999,
        (float)0
        ];

foreach ($doubles as $d) {
        var_dump((string)$d);
}

echo "Done\n";
}
